--- a/CircuitSimulation/CircuitSimulation.csproj
+++ b/CircuitSimulation/CircuitSimulation.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EPPlus" Version="7.6.0" />
       <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+      <PackageReference Include="ScottPlot" Version="5.0.54" />
     </ItemGroup>
 
 </Project>
